--- a/configs/3M_seq_ffn_linear.yaml
+++ b/configs/3M_seq_ffn_linear.yaml
@@ -1,18 +1,16 @@
 input_modality_channels:
-  - 256
   - 25
+  - 35
+  - 256
 output_dim:
   - 5
-  - 1
 d_model: 40
 n_heads: 8
 n_layers: 6
 dropout_embedding: 0.
-dropout_ca: 0.1
-dropout_sa: 0.1
 dropout_relu: 0.1
 dropout_residual: 0.1
 dropout_output: 0
-add_cm_attention_back: True
-add_self_attention_fusion: True
-add_ffn_fusion: True
+module_ffn_fusion: True
+
+attention_type: linear
